# rht

./: .gitignore  CMakeLists.txt  evaluate.py  howto.txt  main.cpp
eval/: evaluate.py  experiments.py
rht/: Accumulate.cpp  Accumulate.h  Accumulator.cpp  Accumulator.h  ConvergentMapper.cpp  ConvergentMapper.h  Epoch.cpp  Epoch.h  ImagePart.cpp  ImagePart.h  LinePart.h  Rht.cpp  Rht.h  ThreadPol.h  Transformation.h
